# quant-x-smartmoney

./: .codexignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  pyproject.toml
.claude/: launch.json
.github/workflows/: daily_data.yml
docs/: README.md
docs/adr/: 0001-use-uv-for-python-env.md  0002-api-first-saas-architecture.md  0003-split-backend-and-dashboard-repos.md
docs/ai-sessions/: 2026-06-14-saas-planning-summary.md
docs/plans/: 2026-06-14-saas-api-roadmap.md
docs/worklog/: 2026-06-14-project-documentation-setup.md
smartmoney/: __init__.py
